text-alignment left, some corrections

--- a/assets/scss/templates/_about.scss
+++ b/assets/scss/templates/_about.scss
@@ -56,5 +56,5 @@
 
 .card-body p {
   font-size: 1.1rem;
-  text-align: justify;
+  text-align: left;
 }
