--- a/assets/scss/templates/_hub-page.scss
+++ b/assets/scss/templates/_hub-page.scss
@@ -26,7 +26,7 @@ table.hub-summary {
     line-height: 1.5;
   }
   p {
-    text-align: justify;
+    text-align: left;
   }
   ol, ul {
     list-style-type: initial;
